--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 201040b
-	trimbase = 
+	trim = face_detector
+	base = 23350b1
+	trimbase = 201040b
 	parent = upstream
 	previous = 1f66fdd
