--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 80862b0
-	trimbase = 
+	trim = people_msgs
+	base = 862f4c1
+	trimbase = 80862b0
 	parent = upstream
 	previous = 1f66fdd
