--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 59cd9de
-	trimbase = 
+	trim = people
+	base = 18c75c7
+	trimbase = 59cd9de
 	parent = upstream
 	previous = 1f66fdd
