--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 23350b1
+	base = ec3a520
 	trimbase = 
 	parent = release/hydro/face_detector
-	previous = 
+	previous = 23350b1
