--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1f9142e
+	base = feaeca4
 	trimbase = 
 	parent = debian/hydro/face_detector
-	previous = 
+	previous = 1f9142e
