--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 862f4c1
+	base = 17591a8
 	trimbase = 
 	parent = release/hydro/people_msgs
-	previous = 
+	previous = 862f4c1
