--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6d3e700
+	base = f8355c3
 	trimbase = 
 	parent = debian/hydro/people_msgs
-	previous = 
+	previous = 6d3e700
