--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 18c75c7
+	base = c85df32
 	trimbase = 
 	parent = release/hydro/people
-	previous = 
+	previous = 18c75c7
