--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 53728ea
+	base = 99c6342
 	trimbase = 
 	parent = debian/hydro/people
-	previous = 
+	previous = 53728ea
