--- a/face_detector/package.xml
+++ b/face_detector/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>face_detector</name>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
   <description>Face detection in images.</description>
   <maintainer email="dan@lazewatsky.com">Dan Lazewatsky</maintainer>
 
@@ -45,6 +45,7 @@
   <run_depend>image_geometry</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
+  <run_depend>message_runtime</run_depend>
 
   <!-- Dependencies needed only for running tests. -->
   <!-- <test_depend>roscpp</test_depend> -->
