--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = face_detector
-	base = 2e8436f
-	trimbase = 
+	base = e201455
+	trimbase = 2e8436f
 	parent = upstream
 	previous = 13041ca
