--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_msgs
-	base = 9df6693
-	trimbase = 
+	base = bb79b48
+	trimbase = 9df6693
 	parent = upstream
 	previous = 13041ca
