--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people
-	base = f4e8d90
-	trimbase = 
+	base = ed7b705
+	trimbase = f4e8d90
 	parent = upstream
 	previous = 13041ca
