--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = face_detector
-	base = 79a485f
-	trimbase = 
+	base = 0c59b58
+	trimbase = 79a485f
 	parent = upstream
 	previous = 388da31
