--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_msgs
-	base = 094b623
-	trimbase = 
+	base = c61a72c
+	trimbase = 094b623
 	parent = upstream
 	previous = 388da31
