--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people
-	base = e62a2b4
-	trimbase = 
+	base = a93c6e2
+	trimbase = e62a2b4
 	parent = upstream
 	previous = 388da31
