--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5085237
-	trimbase = 
+	trim = people_tracking_filter
+	base = 32cb3d3
+	trimbase = 5085237
 	parent = upstream
 	previous = d546502
