--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people
-	base = 7e76bc0
-	trimbase = 
+	base = c034f3a
+	trimbase = 7e76bc0
 	parent = upstream
 	previous = d546502
