--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = face_detector
-	base = 868cb19
-	trimbase = 
+	base = 46c4a39
+	trimbase = 868cb19
 	parent = upstream
 	previous = d546502
