--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 884994b
-	trimbase = 
+	trim = leg_detector
+	base = 3ec80f9
+	trimbase = 884994b
 	parent = upstream
 	previous = d546502
