--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8285202
-	trimbase = 
+	trim = people_velocity_tracker
+	base = 74eaf97
+	trimbase = 8285202
 	parent = upstream
 	previous = d546502
