--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_msgs
-	base = 7f72def
-	trimbase = 
+	base = 2ed09e4
+	trimbase = 7f72def
 	parent = upstream
 	previous = d546502
