--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e788a0d
-	trimbase = 
+	trim = social_navigation_layers
+	base = 4893b62
+	trimbase = e788a0d
 	parent = upstream
 	previous = d546502
