--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4893b62
+	base = 997806f
 	trimbase = 
 	parent = release/hydro/social_navigation_layers
-	previous = 
+	previous = 4893b62
