--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2f818e
+	base = 8f8b6a3
 	trimbase = 
 	parent = debian/hydro/social_navigation_layers
-	previous = 
+	previous = c2f818e
