--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c2f818e
+	base = bb1b6ff
 	trimbase = 
 	parent = debian/hydro/social_navigation_layers
-	previous = 
+	previous = c2f818e
