--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74eaf97
+	base = f7d2fea
 	trimbase = 
 	parent = release/hydro/people_velocity_tracker
-	previous = 
+	previous = 74eaf97
