--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e39d173
+	base = a59eea5
 	trimbase = 
 	parent = debian/hydro/people_velocity_tracker
-	previous = 
+	previous = e39d173
