--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 32cb3d3
+	base = eb958ed
 	trimbase = 
 	parent = release/hydro/people_tracking_filter
-	previous = 
+	previous = 32cb3d3
