--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7622d35
+	base = d2c68b1
 	trimbase = 
 	parent = debian/hydro/people_tracking_filter
-	previous = 
+	previous = 7622d35
