--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ec80f9
+	base = b263a56
 	trimbase = 
 	parent = release/hydro/leg_detector
-	previous = 
+	previous = 3ec80f9
