--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b797edd
+	base = d423322
 	trimbase = 
 	parent = debian/hydro/leg_detector
-	previous = 
+	previous = b797edd
