--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = b0bce53
-	trimbase = 
+	trim = people_tracking_filter
+	base = 454f8d5
+	trimbase = b0bce53
 	parent = upstream
 	previous = 27491d5
