--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 709b525
-	trimbase = 
+	trim = people
+	base = 4fa06bb
+	trimbase = 709b525
 	parent = upstream
 	previous = 27491d5
