--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = a25f5df
-	trimbase = 
+	trim = face_detector
+	base = dc9bd92
+	trimbase = a25f5df
 	parent = upstream
 	previous = 27491d5
