--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fced297
-	trimbase = 
+	trim = leg_detector
+	base = 5ae9b22
+	trimbase = fced297
 	parent = upstream
 	previous = 27491d5
