--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 9859179
-	trimbase = 
+	trim = people_msgs
+	base = c1f9d2f
+	trimbase = 9859179
 	parent = upstream
 	previous = 27491d5
