--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = dc9bd92
+	base = 43a0663
 	trimbase = 
 	parent = release/groovy/face_detector
-	previous = 
+	previous = dc9bd92
