--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 22355f4
+	base = a34daef
 	trimbase = 
 	parent = debian/groovy/face_detector
-	previous = 
+	previous = 22355f4
