--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c1f9d2f
+	base = 2c0dc86
 	trimbase = 
 	parent = release/groovy/people_msgs
-	previous = 
+	previous = c1f9d2f
