--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 40a55e2
+	base = e178435
 	trimbase = 
 	parent = debian/groovy/people_msgs
-	previous = 
+	previous = 40a55e2
