--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5ae9b22
+	base = c9107d9
 	trimbase = 
 	parent = release/groovy/leg_detector
-	previous = 
+	previous = 5ae9b22
