--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1612ffc
+	base = d4f2234
 	trimbase = 
 	parent = debian/groovy/leg_detector
-	previous = 
+	previous = 1612ffc
