--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4fa06bb
+	base = a6e9e0e
 	trimbase = 
 	parent = release/groovy/people
-	previous = 
+	previous = 4fa06bb
