--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4b9b240
+	base = 8c4082f
 	trimbase = 
 	parent = debian/groovy/people
-	previous = 
+	previous = 4b9b240
