--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 454f8d5
+	base = e901dfe
 	trimbase = 
 	parent = release/groovy/people_tracking_filter
-	previous = 
+	previous = 454f8d5
