--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 99ec273
+	base = 1552900
 	trimbase = 
 	parent = debian/groovy/people_tracking_filter
-	previous = 
+	previous = 99ec273
