--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5a8fa9e
+	base = 5f6ec91
 	trimbase = 
 	parent = release/groovy/people_velocity_tracker
-	previous = 
+	previous = 5a8fa9e
