--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = baa3c36
+	base = 34f2e95
 	trimbase = 
 	parent = debian/groovy/people_velocity_tracker
-	previous = 
+	previous = baa3c36
