--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people
-	base = 07e37f5
-	trimbase = 
+	base = 7ccc126
+	trimbase = 07e37f5
 	parent = upstream
 	previous = 27491d5
