--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = face_detector
-	base = 080e667
-	trimbase = 
+	base = 7cb0289
+	trimbase = 080e667
 	parent = upstream
 	previous = 27491d5
