--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = leg_detector
-	base = 7930882
-	trimbase = 
+	base = 2fed798
+	trimbase = 7930882
 	parent = upstream
 	previous = 27491d5
