--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_velocity_tracker
 	base = 5a8fa9e
-	trimbase = 4475d81
+	trimbase = 
 	parent = upstream
 	previous = 27491d5
