--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_velocity_tracker
-	base = 89915b8
-	trimbase = 
+	base = 5d7232a
+	trimbase = 89915b8
 	parent = upstream
 	previous = 27491d5
