--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_msgs
-	base = 7e090d2
-	trimbase = 
+	base = 0372612
+	trimbase = 7e090d2
 	parent = upstream
 	previous = 27491d5
