--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_tracking_filter
 	base = 8e5ea15
-	trimbase = 7f7d903
+	trimbase = 
 	parent = upstream
 	previous = 27491d5
