--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_tracking_filter
-	base = da1d19b
-	trimbase = 
+	base = 45c88d9
+	trimbase = da1d19b
 	parent = upstream
 	previous = 057a7b7
