--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people
-	base = c73ef54
-	trimbase = 
+	base = 5062d32
+	trimbase = c73ef54
 	parent = upstream
 	previous = 057a7b7
