--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = face_detector
-	base = ce5d99f
-	trimbase = 
+	base = bdda8a8
+	trimbase = ce5d99f
 	parent = upstream
 	previous = 057a7b7
