--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = leg_detector
-	base = 2028a08
-	trimbase = 
+	base = 64c5bbe
+	trimbase = 2028a08
 	parent = upstream
 	previous = 057a7b7
