--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_velocity_tracker
 	base = 5d7232a
-	trimbase = 89915b8
+	trimbase = 
 	parent = upstream
 	previous = 27491d5
