--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_velocity_tracker
-	base = 1b03676
-	trimbase = 
+	base = 1c4ab35
+	trimbase = 1b03676
 	parent = upstream
 	previous = 057a7b7
