--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = people_msgs
-	base = 92736ac
-	trimbase = 
+	base = 348b71d
+	trimbase = 92736ac
 	parent = upstream
 	previous = 057a7b7
