--- a/leg_detector/package.xml
+++ b/leg_detector/package.xml
@@ -1,6 +1,6 @@
 <package>
   <name>leg_detector</name>
-  <version>1.0.7</version>
+  <version>1.0.8</version>
   <description>Leg Detector using a machine learning approach to find leg-like patterns of laser scanner readings.</description>
   <author>Caroline Pantofaru</author>
   <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
@@ -36,6 +36,7 @@
   <run_depend>people_tracking_filter</run_depend>
   <run_depend>image_geometry</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
+  <run_depend>laser_filters</run_depend>
   <run_depend>map_laser</run_depend>
 
 </package>
