--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = bbabc37
-	trimbase = 
+	trim = people_tracking_filter
+	base = 8ea28c0
+	trimbase = bbabc37
 	parent = upstream
 	previous = 5bbb872
