--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 50aa91a
-	trimbase = 
+	trim = people
+	base = 92c76e4
+	trimbase = 50aa91a
 	parent = upstream
 	previous = 5bbb872
