--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 5bf0c31
-	trimbase = 
+	trim = face_detector
+	base = e1abfa2
+	trimbase = 5bf0c31
 	parent = upstream
 	previous = 5bbb872
