--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8ac4ed5
-	trimbase = 
+	trim = leg_detector
+	base = 8c12ea4
+	trimbase = 8ac4ed5
 	parent = upstream
 	previous = 5bbb872
