--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 2eebbb5
-	trimbase = 
+	trim = people_velocity_tracker
+	base = e78946f
+	trimbase = 2eebbb5
 	parent = upstream
 	previous = 5bbb872
