--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d52ddb4
-	trimbase = 
+	trim = people_msgs
+	base = 9bf809f
+	trimbase = d52ddb4
 	parent = upstream
 	previous = 5bbb872
