--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 39a6cee
+	base = d3786ee
 	trimbase = 
 	parent = debian/indigo/leg_detector
-	previous = 
+	previous = 39a6cee
