--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e827bc4
+	base = 616e619
 	trimbase = 
 	parent = debian/indigo/people_tracking_filter
-	previous = 
+	previous = e827bc4
