--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 04d1139
+	base = 1ea9b4c
 	trimbase = 
 	parent = debian/indigo/people_msgs
-	previous = 
+	previous = 04d1139
