--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e78946f
+	base = c22203d
 	trimbase = 
 	parent = release/indigo/people_velocity_tracker
-	previous = 
+	previous = e78946f
