--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ba95eac
+	base = c4c1e83
 	trimbase = 
 	parent = debian/indigo/people_velocity_tracker
-	previous = 
+	previous = ba95eac
