--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 68c47ff
+	base = 44c6c92
 	trimbase = 
 	parent = debian/indigo/face_detector
-	previous = 
+	previous = 68c47ff
