--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4a9dfa
+	base = cd57971
 	trimbase = 
 	parent = debian/indigo/people
-	previous = 
+	previous = a4a9dfa
