--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8c12ea4
+	base = aa2d460
 	trimbase = 
 	parent = release/indigo/leg_detector
-	previous = 
+	previous = 8c12ea4
