--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 41ae9b2
+	base = bdecfa8
 	trimbase = 
 	parent = rpm/indigo/leg_detector
-	previous = 
+	previous = 41ae9b2
