--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8ea28c0
+	base = cbcec37
 	trimbase = 
 	parent = release/indigo/people_tracking_filter
-	previous = 
+	previous = 8ea28c0
