--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a1c52bc
+	base = 3928957
 	trimbase = 
 	parent = rpm/indigo/people_tracking_filter
-	previous = 
+	previous = a1c52bc
