--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9bf809f
+	base = 926980e
 	trimbase = 
 	parent = release/indigo/people_msgs
-	previous = 
+	previous = 9bf809f
