--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7cac684
+	base = 6809e55
 	trimbase = 
 	parent = rpm/indigo/people_msgs
-	previous = 
+	previous = 7cac684
