--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 2f84325
+	base = 7d5255a
 	trimbase = 
 	parent = rpm/indigo/people_velocity_tracker
-	previous = 
+	previous = 2f84325
