--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e1abfa2
+	base = 023cad4
 	trimbase = 
 	parent = release/indigo/face_detector
-	previous = 
+	previous = e1abfa2
