--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6623264
+	base = 3a59ac9
 	trimbase = 
 	parent = rpm/indigo/face_detector
-	previous = 
+	previous = 6623264
