--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92c76e4
+	base = 9cf18de
 	trimbase = 
 	parent = release/indigo/people
-	previous = 
+	previous = 92c76e4
