--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 74d059b
+	base = c842ee2
 	trimbase = 
 	parent = rpm/indigo/leg_detector
-	previous = 
+	previous = 74d059b
