--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6efb86e
+	base = e499e00
 	trimbase = 
 	parent = rpm/indigo/people_tracking_filter
-	previous = 
+	previous = 6efb86e
