--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 3ff4226
+	base = 1f27b9c
 	trimbase = 
 	parent = rpm/indigo/people_msgs
-	previous = 
+	previous = 3ff4226
