--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 65c5d67
+	base = 6bd4ca2
 	trimbase = 
 	parent = rpm/indigo/people_velocity_tracker
-	previous = 
+	previous = 65c5d67
