--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a820a1d
+	base = 792467f
 	trimbase = 
 	parent = rpm/indigo/face_detector
-	previous = 
+	previous = a820a1d
